resteasy 4, wf26